[gd_scene load_steps=25 format=2]

[ext_resource path="res://sprites/tankBlue_barrel2_outline.png" type="Texture" id=1]
[ext_resource path="res://scripts/Tank.gd" type="Script" id=2]
[ext_resource path="res://sprites/tankBody_blue_outline.png" type="Texture" id=3]
[ext_resource path="res://sprites/shotLarge.png" type="Texture" id=4]
[ext_resource path="res://sprites/shotOrange.png" type="Texture" id=5]
[ext_resource path="res://sprites/shotRed.png" type="Texture" id=6]
[ext_resource path="res://scripts/TankSight.gd" type="Script" id=7]
[ext_resource path="res://sprites/specialBarrel7.png" type="Texture" id=8]
[ext_resource path="res://samples/tank_cannon.wav" type="AudioStream" id=9]
[ext_resource path="res://samples/disparo_hmg_tank.wav" type="AudioStream" id=10]
[ext_resource path="res://samples/reload.wav" type="AudioStream" id=11]
[ext_resource path="res://samples/tank_motor.wav" type="AudioStream" id=12]
[ext_resource path="res://scripts/Destructable.gd" type="Script" id=13]
[ext_resource path="res://sprites/explosion3.png" type="Texture" id=14]
[ext_resource path="res://sprites/explosion1.png" type="Texture" id=15]
[ext_resource path="res://sprites/explosion2.png" type="Texture" id=16]
[ext_resource path="res://sprites/explosion4.png" type="Texture" id=17]
[ext_resource path="res://sprites/explosion5.png" type="Texture" id=18]
[ext_resource path="res://scenes/HPBar.tscn" type="PackedScene" id=19]

[sub_resource type="Animation" id=1]
resource_name = "fire"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteFire:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.106415, 0.21017 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 34.5, 0 ), Vector2( 35.538, 0 ), Vector2( 40.5, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpriteFire:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.103755, 0.21017 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SpriteFire:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.305944 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -10, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteFire:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="GDScript" id=3]
resource_name = "TankSamples"
script/source = "extends Node

func _ready():
	get_parent().connect(\"machinegun_shooted\", self, \"on_machinegun_shooted\")
	get_parent().connect(\"cannon_shooted\", self, \"on_cannon_shooted\")
	$AudioMotor.play()
	pass

func on_machinegun_shooted():
	$AudioMachinegun.play()
	
func on_cannon_shooted():
	$AudioCannon.play()
	yield($AudioCannon, \"finished\")
	$AudioReload.play()
	
func _physics_process(_delta):
	var pit = abs(get_parent().acceleration / get_parent().max_speed)
	$AudioMotor.pitch_scale = pit + 0.7
"

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ null, ExtResource( 15 ), ExtResource( 16 ), ExtResource( 14 ), ExtResource( 17 ), ExtResource( 18 ), null ],
"loop": false,
"name": "explode",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 22.1858, 20.8811 )

[node name="Tank" type="KinematicBody2D" groups=[
"player",
]]
z_index = 20
collision_mask = 70
script = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 14.5083, -20.227, -13.7722, -20.6016, -21.4511, -14.7956, -20.8892, 15.7324, -13.6302, 20.3805, 14.7621, 20.2318, 21.2507, 15.9197, 21.438, -14.9829 )

[node name="Sprite" type="Sprite" parent="."]
rotation = -1.5708
texture = ExtResource( 3 )

[node name="Machinegun" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Machinegun"]
position = Vector2( 17.5, 10.9999 )
rotation = 1.5708
scale = Vector2( 0.5, 0.5 )
z_index = 20
texture = ExtResource( 8 )

[node name="Muzzle" type="Position2D" parent="Machinegun"]
position = Vector2( 26, 10.9999 )
rotation = 1.5708
scale = Vector2( 0.5, 0.5 )

[node name="Barrel" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Barrel"]
rotation = 1.5708
texture = ExtResource( 1 )
offset = Vector2( 0.0132447, -8.02184 )

[node name="Muzzle" type="Position2D" parent="Barrel"]
position = Vector2( 40, 0 )

[node name="SpriteFire" type="Sprite" parent="Barrel"]
visible = false
position = Vector2( 40.5, 0 )
rotation = -1.5708
z_index = 10
texture = ExtResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Barrel"]
autoplay = "idle"
playback_speed = 2.0
anims/fire = SubResource( 1 )
anims/idle = SubResource( 2 )

[node name="Sight" type="Node2D" parent="Barrel"]
position = Vector2( 350, 0 )
script = ExtResource( 7 )

[node name="TimerReload" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="TimerMachinegun" type="Timer" parent="."]
process_mode = 0
wait_time = 0.1

[node name="Samples" type="Node" parent="."]
script = SubResource( 3 )

[node name="AudioCannon" type="AudioStreamPlayer" parent="Samples"]
stream = ExtResource( 9 )
bus = "fx"

[node name="AudioMachinegun" type="AudioStreamPlayer" parent="Samples"]
stream = ExtResource( 10 )
bus = "fx"

[node name="AudioReload" type="AudioStreamPlayer" parent="Samples"]
stream = ExtResource( 11 )
bus = "fx"

[node name="AudioMotor" type="AudioStreamPlayer" parent="Samples"]
stream = ExtResource( 12 )
bus = "fx"

[node name="Explosion" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )
animation = "explode"

[node name="HPNode" type="Node2D" parent="."]
position = Vector2( 0.5, -34.5 )

[node name="HPBar" parent="HPNode" instance=ExtResource( 19 )]
margin_left = -41.0
margin_top = -4.5
margin_right = 38.0
margin_bottom = 5.5
color = Color( 0.0431373, 0.376471, 0.00392157, 0.721569 )

[node name="DamageArea" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 0
script = ExtResource( 13 )
health = 50

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
shape = SubResource( 4 )
[connection signal="timeout" from="TimerReload" to="." method="_on_TimerReload_timeout"]
[connection signal="timeout" from="TimerMachinegun" to="." method="_on_TimerMachinegun_timeout"]
[connection signal="destroid" from="DamageArea" to="." method="_on_DamageArea_destroid"]
[connection signal="hitted" from="DamageArea" to="." method="_on_DamageArea_hitted"]
